--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,38 @@
-asgiref==3.4.1
-beautifulsoup4==4.10.0
-bs4==0.0.1
-certifi==2021.10.8
-charset-normalizer==2.0.10
-config==0.5.1
-dj-database-url==0.5.0
-Django==3.2.7
+appdirs==1.4.4
+asgiref==3.7.2
+beautifulsoup4==4.12.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+cmake==3.28.1
+dj-database-url==2.1.0
+Django==5.0.1
+django-extensions==3.2.3
 django-heroku==0.3.1
-gunicorn==20.1.0
-idna==3.3
-joblib==1.1.0
-lxml==4.7.1
-multitasking==0.0.10
-numpy==1.22.1
-pandas==1.3.5
-pandas-datareader==0.10.0
-Pillow==9.0.0
-psycopg2==2.9.3
+frozendict==2.4.0
+html5lib==1.1
+idna==3.6
+install==1.3.5
+joblib==1.3.2
+lxml==5.1.0
+multitasking==0.0.11
+numpy==1.26.3
+pandas==2.1.4
+peewee==3.17.0
+pillow==10.2.0
+psycopg2==2.9.9
 python-dateutil==2.8.2
-python-decouple==3.5
-pytz==2021.1
-requests==2.27.1
-scikit-learn==1.0.2
-scipy==1.7.3
+python-decouple==3.8
+pytz==2023.3.post1
+requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.4
 six==1.16.0
-sklearn==0.0
-soupsieve==2.3.1
-sqlparse==0.4.2
-threadpoolctl==3.0.0
-urllib3==1.26.8
+soupsieve==2.5
+sqlparse==0.4.4
+threadpoolctl==3.2.0
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.1.0
+webencodings==0.5.1
 whitenoise==5.3.0
-yfinance==0.1.69
+yfinance==0.2.35
