--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ numpy==1.26.3
 pandas==2.1.4
 peewee==3.17.0
 pillow==10.2.0
-psycopg2==2.9.9
+psycopg-binary==3.1.17
 python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3.post1
